--- a/style/main.less
+++ b/style/main.less
@@ -56,7 +56,7 @@ h2{
 /*--------------------------------------------*/
 
 html{
-	background: @surfaceGray;
+	background: white;
 	//Default Text Styles
 	.BodyFont();
 	font-size: @textSize;
@@ -72,7 +72,9 @@ html{
 /*---> STRUCTURE <----------------------------*/
 /*--------------------------------------------*/
 
-
+div#logo{
+	background: @mainColor;
+}
 
 /*--------------------------------------------*/
 /*---> HEADER & FOOTER <----------------------*/
