--- a/style/main.less
+++ b/style/main.less
@@ -89,6 +89,15 @@ div#logo{
 
 }
 
+div#aliens{
+
+	img{
+		height: 15vh;
+		margin: 2vh;
+	}
+
+}
+
 /*--------------------------------------------*/
 /*---> HEADER & FOOTER <----------------------*/
 /*--------------------------------------------*/
