Styled aliens and text

--- a/style/main.less
+++ b/style/main.less
@@ -30,6 +30,7 @@
 
 p, h1, h2, h3, ul, li{
 	.BodyFont();
+	margin: (0.5 * @textSize) auto;
 }
 
 h1, h2, h3{
@@ -56,6 +57,18 @@ p{
 	font-size: 1.0 * @textSize;
 	line-height: 1.25 * @textSize;
 	text-align: center;
+}
+
+ul{
+	width: 80%;
+	margin: auto 10%;
+}
+
+li{
+	font-size: 1.0 * @textSize;
+	line-height: 1.25 * @textSize;
+	list-style: disc;
+	margin: (0.15 * @textSize) auto;
 }
 
 /*--------------------------------------------*/
@@ -93,7 +106,7 @@ div#aliens{
 
 	img{
 		height: 15vh;
-		margin: 2vh;
+		margin: 1vh;
 	}
 
 }
