Changed contacts to purple

--- a/style/main.less
+++ b/style/main.less
@@ -7,6 +7,7 @@
 @mainDark: @mainColor - #222222;
 
 @charcoal: #1a1a1a;
+@alienPurple: #784EAA;
 
 /*--------------------------------------------*/
 /*---> FONTS <--------------------------------*/
@@ -109,6 +110,11 @@ div#aliens{
 		margin: 1vh;
 	}
 
+}
+
+div#contact{
+	background: @alienPurple;
+	color: white;
 }
 
 /*--------------------------------------------*/
