Positioned AGC logo

--- a/style/main.less
+++ b/style/main.less
@@ -31,7 +31,7 @@
 
 p, h1, h2, h3, ul, li{
 	.BodyFont();
-	margin: (0.5 * @textSize) auto;
+	margin: (0.75 * @textSize) auto;
 	.PartiallyFilled();
 }
 
@@ -104,7 +104,8 @@ html{
 /*--------------------------------------------*/
 
 img.spotlight{
-	height: 30vh;
+	width: 90vw;
+	margin: (0.75 * @textSize) auto;
 }
 
 div#logo{
