--- a/style/main.less
+++ b/style/main.less
@@ -32,7 +32,7 @@
 
 p, h1, h2, h3, ul, li{
 	.BodyFont();
-	margin: (0.75 * @textSize) auto;
+	.GlobalMargin();
 	.PartiallyFilled();
 }
 
@@ -105,6 +105,10 @@ html{
 /*---> STRUCTURE <----------------------------*/
 /*--------------------------------------------*/
 
+.GlobalMargin(){
+	margin: (0.75 * @textSize) auto;
+}
+
 .AlienSquares(@size: 75%){
 	background-image: url('img/background/trans-alien-squares.png');
 	background-position: center center;
@@ -144,7 +148,19 @@ div#aliens{
 
 div#contact{
 	background: @alienPurple;
+	.AlienSquares();
 	color: white;
+}
+
+div.profile{
+
+	display: inline-block;
+
+	img{
+		width: 20vw;
+		.GlobalMargin()
+	}
+
 }
 
 /*--------------------------------------------*/
