Finished team bubbles

--- a/style/main.less
+++ b/style/main.less
@@ -53,7 +53,7 @@ h2{
 	line-height: 1.5 * @textSize;
 }
 
-h2{
+h3{
 	font-size: 1.1 * @textSize;
 	line-height: 1.35 * @textSize;
 }
@@ -156,12 +156,20 @@ div#contact{
 div.profile{
 
 	display: inline-block;
+	vertical-align: top;
 	//float: left;
 
 	img{
-		width: 15vw;
-		margin: (0.75 * @textSize) 2vw;
+		width: 20vw;
+		margin: (0.5 * @textSize) 2vw;
 		border-radius: 50%;
+	}
+
+	h3{
+		font-size: 0.75 * @textSize;
+		line-height: 1.0 * @textSize;
+		font-weight: normal;
+		height: 2.0 * @textSize;
 	}
 
 }
