--- a/style/main.less
+++ b/style/main.less
@@ -253,9 +253,8 @@ div#lessons{
 }
 
 div#contact{
-	background: @alienPurple;
+	background: white;
 	.AlienSquares();
-	color: white;
 }
 
 div.profile{
