Change text align of ps

--- a/style/main.less
+++ b/style/main.less
@@ -63,6 +63,10 @@ h3{
 p{
 	font-size: 1.0 * @textSize;
 	line-height: 1.25 * @textSize;
+	text-align: left;
+}
+
+p.center{
 	text-align: center;
 }
 
