Added prototype styles

--- a/style/main.less
+++ b/style/main.less
@@ -11,6 +11,7 @@
 @astroBlue: #2b83d5;
 @martianRed: #e34826;
 @lunarYellow: #fcdb39;
+@warpspeedGreen: #98d52b;
 
 /*--------------------------------------------*/
 /*---> FONTS <--------------------------------*/
@@ -205,6 +206,12 @@ div#solution{
 		.PhotoCoverBar(@charcoal, 20vw);
 	}
 
+}
+
+div#micropilot{
+	background-color: @warpspeedGreen;
+	color: white;
+	.AlienSquares();
 }
 
 div#process{
