--- a/style/main.less
+++ b/style/main.less
@@ -138,6 +138,11 @@ img.spotlight{
 	margin: (0.75 * @textSize) auto;
 }
 
+img.photo{
+	height: 50vh;
+	margin: (0.75 * @textSize) auto;
+}
+
 /*
  * Examples of Alternate Mixins:
  * .PhotoCoverBar(@charcoal, 5vw); (Standard, Left Align)
